--- a/src/app/dashboards/dashboards.component.scss
+++ b/src/app/dashboards/dashboards.component.scss
@@ -4,7 +4,7 @@
     line-height: 64px;
     padding: 0 24px;
     cursor: pointer;
-    transition: color .3s;
+    transition: color 0.3s;
 
     &:hover {
       color: #1890ff;
