--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -11,7 +11,7 @@
   padding: 40px 25px 25px 25px;
   background: #fff;
   border-radius: 3px;
-  box-shadow: 0 7px 25px rgba(0, 0, 0, .08);
+  box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
 
   h1 {
     padding-bottom: 25px;
