--- a/src/app/pages/acl-add/acl-add.component.html
+++ b/src/app/pages/acl-add/acl-add.component.html
@@ -7,12 +7,14 @@
     <nz-form-item formGroupName="name" bitI18nUpdate>
       <nz-form-label bitCol="label" nzRequired>
         <span>
-          {{bit.l['name']}}
-          <i nz-icon
-             nz-tooltip
-             [nzTooltipTitle]="bit.l['i18n']"
-             nzType="translation"
-             nzTheme="outline">
+          {{ bit.l["name"] }}
+          <i
+            nz-icon
+            nz-tooltip
+            [nzTooltipTitle]="bit.l['i18n']"
+            nzType="translation"
+            nzTheme="outline"
+          >
           </i>
         </span>
       </nz-form-label>
@@ -24,47 +26,58 @@
           [nzValidatingTip]="bit.l['validating']"
           [nzErrorTip]="name.ref"
         >
-          <input nz-input
-                 [nz-tooltip]="tooltip.ref"
-                 [formControlName]="x"
-                 [placeholder]="bit.l['namePlaceholder']" />
+          <input
+            nz-input
+            [nz-tooltip]="tooltip.ref"
+            [formControlName]="x"
+            [placeholder]="bit.l['namePlaceholder']"
+          />
           <bit-i18n-tooltip #tooltip groupName="name"></bit-i18n-tooltip>
-          <bit-error-tip #name [hasError]="{
-            required:bit.l['nameRequire'],
-            duplicated:bit.l['nameDuplicated']
-          }"></bit-error-tip>
+          <bit-error-tip
+            #name
+            [hasError]="{
+              required: bit.l['nameRequire'],
+              duplicated: bit.l['nameDuplicated']
+            }"
+          ></bit-error-tip>
         </nz-form-control>
       </ng-container>
     </nz-form-item>
 
     <nz-form-item>
       <nz-form-label bitCol="label" nzRequired>
-        <span>{{bit.l['key']}}
-          <i nz-icon
-             nz-tooltip
-             [nzTooltipTitle]="bit.l['keyHelp']"
-             nzType="question-circle"
-             nzTheme="outline">
+        <span
+        >{{ bit.l["key"] }}
+          <i
+            nz-icon
+            nz-tooltip
+            [nzTooltipTitle]="bit.l['keyHelp']"
+            nzType="question-circle"
+            nzTheme="outline"
+          >
           </i>
         </span>
       </nz-form-label>
-      <nz-form-control bitCol="control"
-                       nzHasFeedback
-                       [nzValidatingTip]="bit.l['validating']"
-                       [nzErrorTip]="key.ref">
-        <input nz-input
-               formControlName="key"
-               [placeholder]="bit.l['keyPlaceholder']" />
-        <bit-error-tip #key [hasError]="{
-          required:bit.l['keyRequire'],
-          duplicated:bit.l['keyDuplicated']
-        }"></bit-error-tip>
+      <nz-form-control
+        bitCol="control"
+        nzHasFeedback
+        [nzValidatingTip]="bit.l['validating']"
+        [nzErrorTip]="key.ref"
+      >
+        <input nz-input formControlName="key" [placeholder]="bit.l['keyPlaceholder']" />
+        <bit-error-tip
+          #key
+          [hasError]="{
+            required: bit.l['keyRequire'],
+            duplicated: bit.l['keyDuplicated']
+          }"
+        ></bit-error-tip>
       </nz-form-control>
     </nz-form-item>
 
     <nz-form-item>
       <nz-form-label bitCol="label" nzRequired>
-        {{bit.l['writeLists']}}
+        {{ bit.l["writeLists"] }}
       </nz-form-label>
       <nz-form-control bitCol="control">
         <nz-select nzMode="tags" formControlName="write">
@@ -77,7 +90,7 @@
 
     <nz-form-item>
       <nz-form-label bitCol="label" nzRequired>
-        {{bit.l['readLists']}}
+        {{ bit.l["readLists"] }}
       </nz-form-label>
       <nz-form-control bitCol="control">
         <nz-select nzMode="tags" formControlName="read">
@@ -90,12 +103,14 @@
 
     <nz-form-item>
       <nz-form-label bitCol="label" nzRequired>
-        {{bit.l['status']}}
+        {{ bit.l["status"] }}
       </nz-form-label>
       <nz-form-control bitCol="control">
-        <nz-switch formControlName="status"
-                   [nzCheckedChildren]="bit.l['on']"
-                   [nzUnCheckedChildren]="bit.l['off']">
+        <nz-switch
+          formControlName="status"
+          [nzCheckedChildren]="bit.l['on']"
+          [nzUnCheckedChildren]="bit.l['off']"
+        >
         </nz-switch>
       </nz-form-control>
     </nz-form-item>
@@ -107,12 +122,12 @@
         <nz-space>
           <nz-space-item>
             <button nz-button nzType="primary" [disabled]="!form.valid">
-              <i nz-icon nzType="check"></i> {{bit.l['submit']}}
+              <i nz-icon nzType="check"></i> {{ bit.l["submit"] }}
             </button>
           </nz-space-item>
           <nz-space-item>
             <button nz-button type="button" bitBack>
-              <i nz-icon nzType="close"></i> {{bit.l['cancel']}}
+              <i nz-icon nzType="close"></i> {{ bit.l["cancel"] }}
             </button>
           </nz-space-item>
         </nz-space>
