--- a/src/app/pages/admin-edit/admin-edit.component.html
+++ b/src/app/pages/admin-edit/admin-edit.component.html
@@ -4,7 +4,7 @@
   <form nz-form [formGroup]="form" (bitFormSubmit)="submit($event)">
     <nz-form-item>
       <nz-form-label bitCol="label" nzRequired>
-        {{bit.l['username']}}
+        {{ bit.l["username"] }}
       </nz-form-label>
       <nz-form-control bitCol="control">
         <input nz-input [readonly]="true" [value]="username" />
@@ -13,12 +13,17 @@
 
     <nz-form-item>
       <nz-form-label bitCol="label" nzRequired>
-        {{bit.l['role']}}
+        {{ bit.l["role"] }}
       </nz-form-label>
       <nz-form-control bitCol="control">
-        <nz-select nzShowSearch nzAllowClear formControlName="role" [nzPlaceHolder]="bit.l['rolePlaceholder']">
+        <nz-select
+          nzShowSearch
+          nzAllowClear
+          formControlName="role"
+          [nzPlaceHolder]="bit.l['rolePlaceholder']"
+        >
           <ng-template ngFor let-x [ngForOf]="roleLists">
-            <nz-option [nzLabel]="x.name|Locale:bit.locale" [nzValue]="x.key"></nz-option>
+            <nz-option [nzLabel]="x.name | Locale: bit.locale" [nzValue]="x.key"></nz-option>
           </ng-template>
         </nz-select>
       </nz-form-control>
@@ -27,61 +32,54 @@
     <nz-form-item>
       <nz-form-label bitCol="label">
         <span>
-          {{bit.l['password']}}
-          <i
-            nz-icon
-            nzType="question-circle"
-            [nz-tooltip]="bit.l['passwordTips']"
-          >
-          </i>
+          {{ bit.l["password"] }}
+          <i nz-icon nzType="question-circle" [nz-tooltip]="bit.l['passwordTips']"> </i>
         </span>
       </nz-form-label>
-      <nz-form-control
-        bitCol="control"
-        nzHasFeedback
-        [nzErrorTip]="password.ref"
-      >
+      <nz-form-control bitCol="control" nzHasFeedback [nzErrorTip]="password.ref">
         <input
           nz-input
           type="password"
           formControlName="password"
           [placeholder]="bit.l['passwordPlaceholder']"
         />
-        <bit-error-tip #password [hasError]="{
-            min:bit.l['passwordMinLength'],
-            max:bit.l['passwordMaxLength'],
-            lowercase:bit.l['passwordLowercase'],
-            uppercase:bit.l['passwordUppercase'],
-            number:bit.l['passwordNumber'],
-            symbol:bit.l['passwordSymbol']
-          }"></bit-error-tip>
+        <bit-error-tip
+          #password
+          [hasError]="{
+            min: bit.l['passwordMinLength'],
+            max: bit.l['passwordMaxLength'],
+            lowercase: bit.l['passwordLowercase'],
+            uppercase: bit.l['passwordUppercase'],
+            number: bit.l['passwordNumber'],
+            symbol: bit.l['passwordSymbol']
+          }"
+        ></bit-error-tip>
       </nz-form-control>
     </nz-form-item>
 
     <nz-form-item>
       <nz-form-label bitCol="label">
-        {{bit.l['passwordCheck']}}
+        {{ bit.l["passwordCheck"] }}
       </nz-form-label>
-      <nz-form-control
-        bitCol="control"
-        nzHasFeedback
-        [nzErrorTip]="passwordCheck.ref"
-      >
+      <nz-form-control bitCol="control" nzHasFeedback [nzErrorTip]="passwordCheck.ref">
         <input
           nz-input
           type="password"
           formControlName="password_check"
           [placeholder]="bit.l['passwordPlaceholder']"
         />
-        <bit-error-tip #passwordCheck [hasError]="{
-            correctly:bit.l['passwordCorrectly']
-          }"></bit-error-tip>
+        <bit-error-tip
+          #passwordCheck
+          [hasError]="{
+            correctly: bit.l['passwordCorrectly']
+          }"
+        ></bit-error-tip>
       </nz-form-control>
     </nz-form-item>
 
     <nz-form-item>
       <nz-form-label bitCol="label">
-        {{bit.l['call']}}
+        {{ bit.l["call"] }}
       </nz-form-label>
       <nz-form-control bitCol="control" nzHasFeedback>
         <input nz-input formControlName="call" [placeholder]="bit.l['callPlaceholder']" />
@@ -90,21 +88,22 @@
 
     <nz-form-item>
       <nz-form-label bitCol="label">
-        {{bit.l['email']}}
+        {{ bit.l["email"] }}
       </nz-form-label>
-      <nz-form-control bitCol="control"
-                       nzHasFeedback
-                       [nzErrorTip]="email.ref">
+      <nz-form-control bitCol="control" nzHasFeedback [nzErrorTip]="email.ref">
         <input nz-input formControlName="email" [placeholder]="bit.l['emailPlaceholder']" />
-        <bit-error-tip #email [hasError]="{
-          email:bit.l['emailCorrectly']
-        }"></bit-error-tip>
+        <bit-error-tip
+          #email
+          [hasError]="{
+            email: bit.l['emailCorrectly']
+          }"
+        ></bit-error-tip>
       </nz-form-control>
     </nz-form-item>
 
     <nz-form-item>
       <nz-form-label bitCol="label">
-        {{bit.l['phone']}}
+        {{ bit.l["phone"] }}
       </nz-form-label>
       <nz-form-control bitCol="control" nzHasFeedback>
         <input nz-input formControlName="phone" [placeholder]="bit.l['phonePlaceholder']" />
@@ -113,30 +112,30 @@
 
     <nz-form-item>
       <nz-form-label bitCol="label">
-        {{bit.l['avatar']}}
+        {{ bit.l["avatar"] }}
       </nz-form-label>
       <nz-form-control bitCol="control">
-        <p>{{bit.l['avatarTips']}}</p>
-        <nz-upload nzName="image" bitUpload
-                   nzListType="picture-card"
-                   (nzChange)="upload($event)">
+        <p>{{ bit.l["avatarTips"] }}</p>
+        <nz-upload nzName="image" bitUpload nzListType="picture-card" (nzChange)="upload($event)">
           <ng-container *ngIf="!avatar">
             <i nz-icon nzType="plus"></i>
-            <div class="ant-upload-text">{{bit.l['upload']}}</div>
+            <div class="ant-upload-text">{{ bit.l["upload"] }}</div>
           </ng-container>
-          <img width="120" *ngIf="avatar" [src]="bit.static+avatar" class="avatar">
+          <img width="120" *ngIf="avatar" [src]="bit.static + avatar" class="avatar" />
         </nz-upload>
       </nz-form-control>
     </nz-form-item>
 
     <nz-form-item>
       <nz-form-label bitCol="label" nzRequired>
-        {{bit.l['status']}}
+        {{ bit.l["status"] }}
       </nz-form-label>
       <nz-form-control bitCol="control">
-        <nz-switch formControlName="status"
-                   [nzCheckedChildren]="bit.l['on']"
-                   [nzUnCheckedChildren]="bit.l['off']">
+        <nz-switch
+          formControlName="status"
+          [nzCheckedChildren]="bit.l['on']"
+          [nzUnCheckedChildren]="bit.l['off']"
+        >
         </nz-switch>
       </nz-form-control>
     </nz-form-item>
@@ -148,12 +147,12 @@
         <nz-space>
           <nz-space-item>
             <button nz-button nzType="primary" [disabled]="!form.valid">
-              <i nz-icon nzType="check"></i> {{bit.l['submit']}}
+              <i nz-icon nzType="check"></i> {{ bit.l["submit"] }}
             </button>
           </nz-space-item>
           <nz-space-item>
             <button nz-button type="button" bitBack>
-              <i nz-icon nzType="close"></i> {{bit.l['cancel']}}
+              <i nz-icon nzType="close"></i> {{ bit.l["cancel"] }}
             </button>
           </nz-space-item>
         </nz-space>
