--- a/src/app/pages/admin-index/admin-index.component.html
+++ b/src/app/pages/admin-index/admin-index.component.html
@@ -1,6 +1,6 @@
 <bit-header>
   <button nz-button nzType="primary" [bitOpen]="['admin-add']">
-    <span>{{bit.l['add']}}</span>
+    <span>{{ bit.l["add"] }}</span>
   </button>
 </bit-header>
 <ng-template #title>
@@ -13,12 +13,13 @@
           [placeholder]="bit.l['search']"
           [(ngModel)]="lists.search['username'].value"
           (after)="getLists(true)"
-        >
+        />
       </nz-input-group>
       <ng-template #nzAddOnAfter>
         <button
           nzSearch
-          nz-button nzType="primary"
+          nz-button
+          nzType="primary"
           [bitSearchStart]="lists"
           (after)="getLists(true)"
         >
@@ -28,27 +29,17 @@
     </nz-space-item>
     <nz-space-item>
       <button nz-button nzType="default" (click)="getLists(true)">
-        <i nz-icon nzType="sync"></i> {{bit.l['refreshLists']}}
+        <i nz-icon nzType="sync"></i> {{ bit.l["refreshLists"] }}
       </button>
     </nz-space-item>
     <nz-space-item>
-      <button
-        nz-button
-        nzType="default"
-        [bitSearchClear]="lists"
-        (after)="getLists(true)"
-      >
-        <i nz-icon nzType="clear"></i> {{bit.l['clearSearch']}}
+      <button nz-button nzType="default" [bitSearchClear]="lists" (after)="getLists(true)">
+        <i nz-icon nzType="clear"></i> {{ bit.l["clearSearch"] }}
       </button>
     </nz-space-item>
     <nz-space-item>
-      <button
-        nz-button
-        nzDanger
-        [disabled]="!lists.batch"
-        (click)="deleteCheckData()"
-      >
-        <i nz-icon nzType="rest"></i> {{bit.l['bulkDelete']}}
+      <button nz-button nzDanger [disabled]="!lists.batch" (click)="deleteCheckData()">
+        <i nz-icon nzType="rest"></i> {{ bit.l["bulkDelete"] }}
       </button>
     </nz-space-item>
   </nz-space>
@@ -67,34 +58,38 @@
   >
     <thead>
     <tr>
-      <th nzShowCheckbox nzWidth="65px"
-          [(nzChecked)]="lists.checked"
-          [nzIndeterminate]="lists.indeterminate"
-          (nzCheckedChange)="lists.checkedAll($event)"></th>
-      <th nzWidth="200px">{{bit.l['username']}}</th>
-      <th nzWidth="200px">{{bit.l['role']}}</th>
-      <th nzWidth="200px">{{bit.l['call']}}</th>
-      <th nzWidth="150px">{{bit.l['phone']}}</th>
-      <th nzWidth="200px">{{bit.l['email']}}</th>
-      <th>{{bit.l['status']}}</th>
-      <th nzWidth="300px"
-          nzRight="0px">{{bit.l['action']}}</th>
+      <th
+        nzShowCheckbox
+        nzWidth="65px"
+        [(nzChecked)]="lists.checked"
+        [nzIndeterminate]="lists.indeterminate"
+        (nzCheckedChange)="lists.checkedAll($event)"
+      ></th>
+      <th nzWidth="200px">{{ bit.l["username"] }}</th>
+      <th nzWidth="200px">{{ bit.l["role"] }}</th>
+      <th nzWidth="200px">{{ bit.l["call"] }}</th>
+      <th nzWidth="150px">{{ bit.l["phone"] }}</th>
+      <th nzWidth="200px">{{ bit.l["email"] }}</th>
+      <th>{{ bit.l["status"] }}</th>
+      <th nzWidth="300px" nzRight="0px">{{ bit.l["action"] }}</th>
     </tr>
     </thead>
     <tbody>
     <tr *ngFor="let data of table.data">
-      <td nzShowCheckbox
-          [(nzChecked)]="data.checked"
-          (nzCheckedChange)="lists.refreshStatus()"></td>
-      <td>{{data.username}}</td>
+      <td
+        nzShowCheckbox
+        [(nzChecked)]="data.checked"
+        (nzCheckedChange)="lists.refreshStatus()"
+      ></td>
+      <td>{{ data.username }}</td>
       <td>
-        <ng-container *ngIf="role[data.role]!==undefined">
-          {{(role[data.role].name)|Locale:bit.locale}}
+        <ng-container *ngIf="role[data.role] !== undefined">
+          {{ role[data.role].name | Locale: bit.locale }}
         </ng-container>
       </td>
-      <td>{{data.call}}</td>
-      <td>{{data.phone}}</td>
-      <td>{{data.email}}</td>
+      <td>{{ data.call }}</td>
+      <td>{{ data.phone }}</td>
+      <td>{{ data.email }}</td>
       <td>
         <nz-switch
           [(ngModel)]="data.status"
@@ -107,12 +102,12 @@
         </nz-switch>
       </td>
       <td>
-        <a [bitOpen]="['admin-edit',data.id]">
-          <i nz-icon nzType="edit"></i> {{bit.l['edit']}}
+        <a [bitOpen]="['admin-edit', data.id]">
+          <i nz-icon nzType="edit"></i> {{ bit.l["edit"] }}
         </a>
         <nz-divider nzType="vertical"></nz-divider>
         <a (click)="deleteData([data.id])">
-          <i nz-icon nzType="delete"></i> {{bit.l['delete']}}
+          <i nz-icon nzType="delete"></i> {{ bit.l["delete"] }}
         </a>
       </td>
     </tr>
