--- a/src/app/pages/resource-add/resource-add.component.html
+++ b/src/app/pages/resource-add/resource-add.component.html
@@ -6,121 +6,143 @@
   <form nz-form [formGroup]="form" (bitFormSubmit)="submit($event)">
     <nz-form-item formGroupName="name">
       <nz-form-label bitCol="label" nzRequired>
-        {{bit.l['name']}}
+        {{ bit.l["name"] }}
       </nz-form-label>
       <ng-container *ngFor="let x of bit.i18nContain">
-        <nz-form-control *ngIf="bit.equalI18n(x)"
-                         nzHasFeedback
-                         bitCol="control"
-                         [nzErrorTip]="name.ref">
-          <input nz-input
-                 bitI18nUpdate
-                 [nz-tooltip]="tooltip.ref"
-                 [formControlName]="x"
-                 [placeholder]="bit.l['namePlaceholder']" />
+        <nz-form-control
+          *ngIf="bit.equalI18n(x)"
+          nzHasFeedback
+          bitCol="control"
+          [nzErrorTip]="name.ref"
+        >
+          <input
+            nz-input
+            bitI18nUpdate
+            [nz-tooltip]="tooltip.ref"
+            [formControlName]="x"
+            [placeholder]="bit.l['namePlaceholder']"
+          />
           <bit-i18n-tooltip #tooltip groupName="name"></bit-i18n-tooltip>
-          <bit-error-tip #name [hasError]="{
-            required:bit.l['nameRequire']
-          }"></bit-error-tip>
+          <bit-error-tip
+            #name
+            [hasError]="{
+              required: bit.l['nameRequire']
+            }"
+          ></bit-error-tip>
         </nz-form-control>
       </ng-container>
     </nz-form-item>
 
     <nz-form-item>
       <nz-form-label bitCol="label" nzRequired>
-        <span>{{bit.l['key']}}
-          <i nz-icon
-             nz-tooltip
-             [nzTooltipTitle]="bit.l['keyHelp']"
-             nzType="question-circle"
-             nzTheme="outline"
+        <span
+        >{{ bit.l["key"] }}
+          <i
+            nz-icon
+            nz-tooltip
+            [nzTooltipTitle]="bit.l['keyHelp']"
+            nzType="question-circle"
+            nzTheme="outline"
           ></i>
         </span>
       </nz-form-label>
-      <nz-form-control bitCol="control"
-                       nzHasFeedback
-                       [nzValidatingTip]="bit.l['validating']"
-                       [nzErrorTip]="api.ref">
-        <input nz-input
-               formControlName="key"
-               [placeholder]="bit.l['keyPlaceholder']" />
-        <bit-error-tip #api [hasError]="{
-          required:bit.l['keyRequire'],
-          duplicated:bit.l['keyDuplicated']
-        }"></bit-error-tip>
+      <nz-form-control
+        bitCol="control"
+        nzHasFeedback
+        [nzValidatingTip]="bit.l['validating']"
+        [nzErrorTip]="api.ref"
+      >
+        <input nz-input formControlName="key" [placeholder]="bit.l['keyPlaceholder']" />
+        <bit-error-tip
+          #api
+          [hasError]="{
+            required: bit.l['keyRequire'],
+            duplicated: bit.l['keyDuplicated']
+          }"
+        ></bit-error-tip>
       </nz-form-control>
     </nz-form-item>
 
     <nz-form-item>
       <nz-form-label bitCol="label" nzRequired>
-        {{bit.l['parent']}}
+        {{ bit.l["parent"] }}
       </nz-form-label>
       <nz-form-control bitCol="control">
-        <nz-tree-select *ngIf="parentLists.length!==0"
-                        formControlName="parent"
-                        [nzDisabled]="parentId!==undefined"
-                        [nzNodes]="parentLists"
-                        [nzShowLine]="true"
-                        [nzShowSearch]="true"
-                        [nzDefaultExpandAll]="true"
-                        [nzPlaceHolder]="bit.l['parentPlaceholder']">
+        <nz-tree-select
+          *ngIf="parentLists.length !== 0"
+          formControlName="parent"
+          [nzDisabled]="parentId !== undefined"
+          [nzNodes]="parentLists"
+          [nzShowLine]="true"
+          [nzShowSearch]="true"
+          [nzDefaultExpandAll]="true"
+          [nzPlaceHolder]="bit.l['parentPlaceholder']"
+        >
         </nz-tree-select>
       </nz-form-control>
     </nz-form-item>
 
     <nz-form-item>
       <nz-form-label bitCol="label" nzRequired>
-        {{bit.l['nav']}}
+        {{ bit.l["nav"] }}
       </nz-form-label>
       <nz-form-control bitCol="control">
-        <nz-switch formControlName="nav"
-                   [nzCheckedChildren]="bit.l['yes']"
-                   [nzUnCheckedChildren]="bit.l['no']">
+        <nz-switch
+          formControlName="nav"
+          [nzCheckedChildren]="bit.l['yes']"
+          [nzUnCheckedChildren]="bit.l['no']"
+        >
         </nz-switch>
       </nz-form-control>
     </nz-form-item>
 
     <nz-form-item>
       <nz-form-label bitCol="label" nzRequired>
-        {{bit.l['router']}}
+        {{ bit.l["router"] }}
       </nz-form-label>
       <nz-form-control bitCol="control">
-        <nz-switch formControlName="router"
-                   [nzCheckedChildren]="bit.l['yes']"
-                   [nzUnCheckedChildren]="bit.l['no']">
+        <nz-switch
+          formControlName="router"
+          [nzCheckedChildren]="bit.l['yes']"
+          [nzUnCheckedChildren]="bit.l['no']"
+        >
         </nz-switch>
       </nz-form-control>
     </nz-form-item>
 
     <nz-form-item>
       <nz-form-label bitCol="label" nzRequired>
-        {{bit.l['policy']}}
+        {{ bit.l["policy"] }}
       </nz-form-label>
       <nz-form-control bitCol="control">
-        <nz-switch formControlName="policy"
-                   [nzCheckedChildren]="bit.l['yes']"
-                   [nzUnCheckedChildren]="bit.l['no']">
+        <nz-switch
+          formControlName="policy"
+          [nzCheckedChildren]="bit.l['yes']"
+          [nzUnCheckedChildren]="bit.l['no']"
+        >
         </nz-switch>
       </nz-form-control>
     </nz-form-item>
 
     <nz-form-item>
       <nz-form-label bitCol="label">
-        {{bit.l['icon']}}
+        {{ bit.l["icon"] }}
       </nz-form-label>
       <nz-form-control bitCol="control">
-        <input type="text" nz-input formControlName="icon">
+        <input type="text" nz-input formControlName="icon" />
       </nz-form-control>
     </nz-form-item>
 
     <nz-form-item>
       <nz-form-label bitCol="label" nzRequired>
-        {{bit.l['status']}}
+        {{ bit.l["status"] }}
       </nz-form-label>
       <nz-form-control bitCol="control">
-        <nz-switch formControlName="status"
-                   [nzCheckedChildren]="bit.l['on']"
-                   [nzUnCheckedChildren]="bit.l['off']">
+        <nz-switch
+          formControlName="status"
+          [nzCheckedChildren]="bit.l['on']"
+          [nzUnCheckedChildren]="bit.l['off']"
+        >
         </nz-switch>
       </nz-form-control>
     </nz-form-item>
@@ -132,12 +154,12 @@
         <nz-space>
           <nz-space-item>
             <button nz-button nzType="primary" [disabled]="!form.valid">
-              <i nz-icon nzType="check"></i> {{bit.l['submit']}}
+              <i nz-icon nzType="check"></i> {{ bit.l["submit"] }}
             </button>
           </nz-space-item>
           <nz-space-item>
             <button nz-button type="button" bitBack>
-              <i nz-icon nzType="close"></i> {{bit.l['cancel']}}
+              <i nz-icon nzType="close"></i> {{ bit.l["cancel"] }}
             </button>
           </nz-space-item>
         </nz-space>
