--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -35,13 +35,18 @@
         {{ bit.l["avatar"] }}
       </nz-form-label>
       <nz-form-control bitCol="control">
-        <p>{{ bit.l["avatarTips"] }}</p>
-        <nz-upload nzName="image" bitUpload nzListType="picture-card" (nzChange)="upload($event)">
+        <nz-upload
+          class="single-uploader"
+          bitUpload
+          nzName="file"
+          nzListType="picture-card"
+          (nzChange)="upload($event)"
+        >
           <ng-container *ngIf="!avatar">
             <i nz-icon nzType="plus"></i>
             <div class="ant-upload-text">{{ bit.l["upload"] }}</div>
           </ng-container>
-          <img width="120" *ngIf="avatar" [src]="bit.static + avatar" class="avatar" />
+          <img *ngIf="avatar" [src]="bit.static + avatar" class="avatar" />
         </nz-upload>
       </nz-form-control>
     </nz-form-item>
