--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,12 @@
 .ant-menu-sub.center-submenu {
   margin-left: -64px;
 }
+
+.single-uploader {
+  width: 128px;
+  height: 128px;
+
+  img {
+    width: 100%;
+  }
+}
