--- a/src/app/dashboards/dashboards.component.html
+++ b/src/app/dashboards/dashboards.component.html
@@ -103,7 +103,7 @@
           <ng-container *ngTemplateOutlet="support.actions"></ng-container>
         </nz-page-header-extra>
       </nz-page-header>
-      <div class="app-warpper">
+      <div #warpper class="app-warpper">
         <router-outlet></router-outlet>
       </div>
     </nz-content>
